# wasm-runtime

./: Cargo.toml  README.md
rustpython_wasm/: Cargo.toml
rustpython_wasm/.cargo/: config.toml
rustpython_wasm/src/: lib.rs
src/: main.rs
wasm/: module.wat  test.wat
