[package]
name = "rustpython-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = "0.3"
rustpython-vm = { git = "https://github.com/RustPython/RustPython", branch = "main", default-features = false, features = ["compiler"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
